# lib/api-spec/openapi.yaml
@@ -1006,6 +1006,8 @@ components:
           type: array
           items:
             type: string
+        phone:
+          type: string
         upiId:
           type: string
         bookingMode:
@@ -1100,6 +1102,8 @@ components:
           type: array
           items:
             type: string
+        phone:
+          type: string
         upiId:
           type: string
         bookingMode:
@@ -1145,6 +1149,8 @@ components:
           type: array
           items:
             type: string
+        phone:
+          type: string
         upiId:
           type: string
         bookingMode:
